# Data-Alchemist

./: .gitignore  README.md  docker-compose.local.yaml  pyproject.toml  setup.py  快速开始.md
config/: config.yaml  local.yaml
data/: hive-demo.sql
scripts/: bootstrap.sh  generate-real-demo-data.py  load-config-env.py  local-stack.sh  run-plain.sh  run-tui.sh
skills/: manifest.yaml
skills/dag-diagnosis/: SKILL.md
skills/data-cleaning/: SKILL.md
skills/data-quality/: SKILL.md
skills/etl-pipeline/: SKILL.md
skills/feature-engineering/: SKILL.md
skills/spark-job/: SKILL.md
skills/spark-sql/: SKILL.md
sparkos/: __init__.py  __main__.py  cli.py
sparkos/application/: agent_runtime.py  dag_diagnosis.py  dag_observer.py  file_task_engines.py  file_tasks.py  graph_edge_loader.py  graph_runtime.py  job_orchestrator.py  metadata_service.py  planner.py  ports.py  skill_registry.py  spark_execution.py  spark_session_factory.py  spark_templates.py  spark_tools.py  turn_router.py  vector_kb_runtime.py  workbench.py
sparkos/domain/: __init__.py  agent.py  capability.py  catalog.py  diagnosis.py  graph.py  job.py  metadata.py  plan.py  problem.py  result.py  turn.py  vector.py
sparkos/infrastructure/: settings.py
sparkos/infrastructure/catalog/: __init__.py  config_catalog.py
sparkos/infrastructure/compute/: __init__.py  router.py  simulated.py  spark_backend.py
sparkos/infrastructure/embedding/: local_embedding.py  openai_compatible.py
sparkos/infrastructure/llm/: __init__.py  base.py  local_models.py  model_router.py  (+1 more)
tests/: test_workbench.py
(+14 files in other folders)
